<resources>
    <string name="app_name">Lifeline</string>
    <string name="Welcome">Welcome to</string>
    <string name="lifeline">Lifeline</string>
    <string name="Save">Save a life with the blood you\'ve been gifted</string>
    <string name="lifeline_logo">Lifeline Logo</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome2">Welcome to</string>
    <string name="health">Health Vector</string>
    <string name="SignIN">Sign in</string>
    <string name="Forgot">Forgot Password ?</string>
    <string name="SignUP">Sign Up</string>
    <string name="Request">Requests</string>
    <string name="Around">From around you</string>
    <string name="Email">Email:</string>
    <string name="DOB">DOB:</string>
    <string name="Weight">Weight:</string>
    <string name="Height">Height:</string>
    <string name="PhoneNo">Phone No:</string>
    <string name="Logout">Logout</string>
    <string name="Reset">Reset Password</string>
    <string name="HospWelcome">Welcome Back !</string>
    <string name="HospInven">Inventory Details</string>
    <string name="BloodDeetsStock">STOCK</string>
    <string name="BloodDeetsCurrentC">Current Capacity</string>
    <string name="BloodDeetsUsed">Used</string>
    <string name="BloodDeetsDonated">Donated</string>
    <string name="BloodDeetsConfirm">CONFIRM</string>
    <string name="switch1">DONOR</string>
    <string name="switch2">HOSPITAL</string>
</resources>