<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/RequestHeader"
        android:layout_width="145dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/Request"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/AroundHeader"
        android:layout_width="174dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/Around"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/RequestHeader"/>

    <ImageView
        android:id="@+id/hamburga"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/hamburger"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/Logout"
        android:textSize="20sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="#FF5555"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/RefreshLayoutD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</RelativeLayout>