<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="299sp"
        android:layout_height="280sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/drop_vector"
        android:contentDescription="@string/lifeline_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/ForgotPass_Lifeline"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/lifeline"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/ForgotPassEmail"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPass_Lifeline"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/ForgotPassBtn"
        android:layout_width="225dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/lato_black"
        android:hapticFeedbackEnabled="true"
        android:lines="2"
        android:text="@string/Reset"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#FF5555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassEmail"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBarreset"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

</androidx.constraintlayout.widget.ConstraintLayout>